--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
 
     "name":"LolByte: League of Legends Summoner Search",
     "description":"Powered by Riot's Official API, quickly view detailed information about a summoner all within a lightweight extension.",
     "short_name":"LolByte",
 
-    "version": "2023",
+    "version": "2024",
 
     "host_permissions": [
         "http://lolbyte.me/",
@@ -21,5 +21,11 @@
         "16": "img/icons/icon-16.png",
         "48": "img/icons/icon-48.png",
         "128": "img/icons/icon-128.png"
+    },
+
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "crxlolbyte@gmail.com"
+        }
     }
 }
